test/trivial/bradc/initvarsamename.good
initvarsamename.chpl:1: In function '__init_initvarsamename':
initvarsamename.chpl:4: error: 'x' used before defined
